--- a/index.html
+++ b/index.html
@@ -7,6 +7,60 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="container">
+            <div id="branding">
+                <h1>Acme webdesign</h1>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="services.html">Services</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <section id="showcase">
+        <div class="container">
+            <h1>Aforable professional web design</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus aspernatur sunt, accusantium iste ad perferendis maiores minima quaerat beatae ullam? Ad ullam quia praesentium dolor laudantium minus. Magni, ad ipsum.</p>
+        </div>
+    </section>
+
+    <section id="newsletter">
+        <div class="container">
+            <h1>Subscribe To Our Newsletter</h1>
+            <form>
+                <input type="email" placeholder="Enter Email">
+                <button type="submit" class="button_1">Subscribe</button>
+            </form>
+        </div>
+    </section>
+
+    <section id="boxes">
+        <div class="container">
+            <div class="box">
+                <img src="./img/logo_html.png">
+                <h3>HTML5 Markup</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores hic vitae cum, consectetur quam nobis tempore qui doloribus facere ullam obcaecati non provident temporibus iusto voluptas neque vero earum exercitationem.</p>
+            </div>
+            <div class="box">
+                <img src="./img/logo_css.png">
+                <h3>HTML3 Styling</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores hic vitae cum, consectetur quam nobis tempore qui doloribus facere ullam obcaecati non provident temporibus iusto voluptas neque vero earum exercitationem.</p>
+            </div>
+            <div class="box">
+                <img src="./img/logo_brush.png">
+                <h3>Graphic Design</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores hic vitae cum, consectetur quam nobis tempore qui doloribus facere ullam obcaecati non provident temporibus iusto voluptas neque vero earum exercitationem.</p>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <p>Acme Web Design, Copyright &copy; 2020</p>
+    </footer>
 </body>
 </html>
