--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
             <div class="box">
                 <img src="./img/logo_css.png">
-                <h3>HTML3 Styling</h3>
+                <h3>CSS3 Styling</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores hic vitae cum, consectetur quam nobis tempore qui doloribus facere ullam obcaecati non provident temporibus iusto voluptas neque vero earum exercitationem.</p>
             </div>
             <div class="box">
